fix border issue on iphone safari

--- a/src/assets/less/critical.less
+++ b/src/assets/less/critical.less
@@ -14,6 +14,7 @@
         background: linear-gradient(90deg, rgba(13, 96, 165, 1) 0%, rgba(162, 229, 247, 1) 100%);
         position: relative;
         z-index: 1;
+        border: none;
         /* Prevents white rectangle pseudos from overlapping the sections below */
         overflow: hidden;
 
